[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chewie"
version = "0.1.0"
description = "A powerful CLI application for creating image collages"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "Pillow>=9.5.0",
    "pygame>=2.3.0"
]

[project.scripts]
chewie = "chewie.cli:main"